# wisdom-edu

./: .fuckucoderc.json  .gitignore  AGENTS.md  AGENT_TODO.md  README.md  TEXT.md  report.md
backend/: .env.example  .gitignore  AGENTS.md  config.ini  manage.py  pyproject.toml  requirements.txt  tools.py
backend/ai_services/: admin.py  apps.py  auth.py  consumers.py  kt_views.py  models.py  routing.py  serializers.py  student_ai_chat_views.py  student_ai_profile_views.py  student_ai_views.py  student_rag_support.py  student_rag_views.py  test_kt_models.py  test_llm_service.py  test_student_ai_multicourse.py  test_student_rag_base.py  test_student_rag_context.py  test_student_rag_runtime.py  test_web_search.py  tests.py  urls.py  views.py
backend/application/: __init__.py
backend/assessments/: ability_survey_defaults.py  ability_views.py  admin.py  apps.py  assessment_helpers.py  assessment_models.py  habit_survey_defaults.py  habit_views.py  history_models.py  knowledge_assessment_logic.py  knowledge_generation.py  knowledge_generation_support.py  knowledge_views.py  models.py  question_models.py  serializers.py  status_profile_views.py  tests.py  urls.py  views.py
backend/common/: __init__.py  admin.py  apps.py  config.py  course_utils.py  defense_demo.py  defense_demo_accounts.py  defense_demo_assessment_questions.py  defense_demo_assessment_state.py  defense_demo_assessment_support.py  defense_demo_config.py  defense_demo_content.py  defense_demo_environment.py  defense_demo_path.py  defense_demo_progress.py  defense_demo_public.py  defense_demo_stage.py  (+19 more)
(+594 files in other folders)
