[project]
name = "wisdom-edu-backend"
version = "0.1.0"
description = "WisdomEdu Django backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "channels>=4.2.0,<5.0",
    "daphne>=4.1.2,<5.0",
    "django>=6.0.2,<6.1",
    "django-cors-headers>=4.6.0,<5.0",
    "django-filter>=25.2,<26.0",
    "djangorestframework>=3.15.0,<4.0",
    "djangorestframework-simplejwt>=5.4.0,<6.0",
    "drf-spectacular>=0.28.0,<1.0",
    "langchain>=1.2.7,<2.0",
    "langchain-community>=0.4.1,<1.0",
    "langchain-openai>=1.1.7,<2.0",
    "neo4j>=6.1.0,<7.0",
    "neo4j-graphrag>=1.14.1,<2.0",
    "openpyxl>=3.1.5,<4.0",
    "pandas>=3.0.0,<4.0",
    "pillow>=12.1.1,<13.0",
    "psycopg2-binary>=2.9.10,<3.0",
    "python-dotenv>=1.0.1,<2.0",
    "qdrant-client>=1.17.1,<2.0",
    "requests>=2.31.0,<3.0",
    "scikit-learn>=1.8.0,<2.0",
    "sentence-transformers>=5.3.0,<6.0",
    "torch==2.11.0",
    "xlrd>=2.0.1",
]

[tool.uv]
package = false
